samples/_failures_safe/1761692580_9e4a0d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9b08893d.c: In function ‘main’:
./samples/SAFE/__tmp_9b08893d.c:154:12: error: missing terminating " character
  154 |     printf("Comp
      |            ^~~~~
./samples/SAFE/__tmp_9b08893d.c:154:5: error: expected expression at end of input
  154 |     printf("Comp
      |     ^~~~~~
./samples/SAFE/__tmp_9b08893d.c:154:5: error: expected declaration or statement at end of input
